# C

./: README.md
L10_Working_with_Characters_n_Strings/: ascii.c  getback.c  gets.c  input.c  memalloc.c  put.c
L11_Implementing_Structures_Unions_n_Typedefs/: arrayrecords.c  arraystruct.c  struct.c  structfunc.c
L12_Understanding_Scope/: CMakeLists.txt  block.c  extern.c  scope.c  static.c
L13_Advanced_Program_Control/: CMakeLists.txt  contin.c  gotoIt.c  menu2.c
L14_Screen_Printer_n_Keyboard/: CMakeLists.txt  clearing2.c  fgets.c  getch2.c  getchar.c  getchar2.c  puts.c
L15_Pointers_Pointers_n_Arrays_of_Pointers/: CMakeLists.txt  message2.c  ptrmulti.c
L16_Pointers_to_Functions_n_Linked_Lists/: CMakeLists.txt  linkdemo.c  passptr.c  ptrfunc2.c
L17_Using_Disk_Files/: filerenamer.c  hello.c  numberinput.txt  openfiles.c  randomfile.c
L18_Manipulating_Strings/: CMakeLists.txt  getaninteger.c  stringcat.c  stringcompare2.c  stringconversion.c  stringcopy2.c  stringsearch3.c  stringsearch4.c
L19_Getting_More_from_Functions/: pointerreturn.c  typecast.c  variableaverage.c
L1_Getting_Started/: CMakeLists.txt
L20_Exploring_C_Function_Library/: CMakeLists.txt  assert.c  math.c  searchandsort2.c  whattime.c
L21_Working_with_Memory/: casting.c  freemem.c  reusingmem.c  shiftit.c
L22_Advanced_Compiler_Use/: macrorepl.c  prog.h
L22_Advanced_Compiler_Use/list2101/: calc.h  list2101.c
L2_Components/: ex02-02.c  ex02-04.c  ex02-05.c
L3_Data_Types/: sizeof.c
L4_Statements/: CMakeLists.txt  seconds.c
L5_Packing_Code_in_Functions/: cube2.c  cube3.c  recurse.c  roomassign.c
L6_Basic_Program_Control/: CMakeLists.txt  dowhilestate.c  forstate.c  nestfor.c  whilest.c
L7_Reading_Writing_Information/: CMakeLists.txt  scanit.c
L8_Using_Numeric_Arrays/: CMakeLists.txt  expenses.c  randomarray.c
L9_Understanding_Pointers/: arraypass.c  pointer.c
Lesson 1 - Getting Started/: CMakeLists.txt  pattern.c
Lesson 10 - Working with Characters and Strings/: CMakeLists.txt  chartest.c
Lesson 11 - Implementing Structures, Unions and Typedefs/: CMakeLists.txt  pointerstep.c  simplestruct.c  union.c  union2.c
Lesson 12 - Understanding Scope/: CMakeLists.txt  scope2.c
Lesson 13 - Advanced Program Control/: CMakeLists.txt  breaking.c  fallthru.c  menu.c  switch1.c  switch2.c
Lesson 14 - Screen, Printer and Keyboard/: CMakeLists.txt  clearing.c  getch.c  printfdemo.c  putchar.c  putchar2.c  scanfdemos.c  stream.c
Lesson 15 - Pointers to Pointers and Arrays of Pointers/: CMakeLists.txt  message.c  multiarray.c  multiarraymath.c  multiarraysize.c  sort.c
Lesson 16 - Pointers to Functions and Linked Lists/: CMakeLists.txt  linklist.c  ptrfunc.c  ptrsort.c
Lesson 17 - Using Disk Files/: CMakeLists.txt  direct.c  endoffile.c  filecopier.c  filedeleter.c  fileposition.c  fscanfnums.c  numberfile.c  tempfilemaker.c
Lesson 18 - Manipulating Strings/: CMakeLists.txt  stringcat2.c  stringcompare.c  stringcopy.c  stringlen.c  stringsearch1.c  stringsearch2.c  stringtodouble.c
Lesson 19 - Getting More from Functions/: CMakeLists.txt  differentarguments.c
Lesson 2 - Components/: CMakeLists.txt  list_it.c
Lesson 20 - Exploring C  Function Library/: CMakeLists.txt  perror.c  searchandsort.c
Lesson 21 - Working with Memory/: CMakeLists.txt  callocmem.c  memfunctions.c
Lesson 22 - Advanced Compiler Use/: CMakeLists.txt  commandargs.c
Lesson 22 - Advanced Compiler Use/list2101/: CMakeLists.txt  calc.c
Lesson 3 -  Data Types/: CMakeLists.txt
Lesson 4 - Statements/: CMakeLists.txt  biggernum.c  ex04-02.c  logicalorder.c  unary.c
Lesson 5 - Packing Code in Functions/: CMakeLists.txt  cube.c  halfof.c  var.c
Lesson 6 - Basic Program Control/: CMakeLists.txt  nestwhile.c
Lesson 7 - Reading and Writing Information/: CMakeLists.txt  escape.c  nums.c
Lesson 8 - Using Numeric Arrays/: CMakeLists.txt  scoring.c
Lesson 9 - Understanding Pointers/: CMakeLists.txt  arraypass2.c  arraysize.c  ptr_math.c
Notes/: C.pptx  C11.pptx
